// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainAnyValues fails when given object contains value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainAnyValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain any of the following values:
  <green>["baz"]</color>
Received:
  <red>{"a": "foo", "b": "bar", "c": "baz"}</color>"
`;

exports[`.not.toContainAnyValues fails when given object contains value 2`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainAnyValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain any of the following values:
  <green>["foo", "bar"]</color>
Received:
  <red>{"a": "foo", "b": "bar", "c": "baz"}</color>"
`;

exports[`.toContainAnyValues fails when given object does not contain value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAnyValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain any of the following values:
  <green>["fax"]</color>
Received:
  <red>{"a": "foo", "b": "bar", "c": "baz"}</color>"
`;

exports[`.toContainAnyValues fails when given object does not contain value 2`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAnyValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain any of the following values:
  <green>["fax", "rom"]</color>
Received:
  <red>{"a": "foo", "b": "bar", "c": "baz"}</color>"
`;

exports[`.toContainAnyValues fails when given object does not contain value 3`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainAnyValues(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain any of the following values:
  <green>["dae", "mur", "zoe"]</color>
Received:
  <red>{"a": "foo", "b": "bar", "c": "baz"}</color>"
`;
